<resources>
    <string name="app_name">Techflex e_Learn</string>
    <string name="action_settings">Settings</string>
    <string name="action_quit">Quit App </string>
    <string name="action_logout">Logout</string>
    <string name="how_to">How to?</string>
    <string name="_2020_techflex_e_Literacy">©2020 Techflex e_Learn | ALL RIGHT RESERVED</string>
    <string name="enter_password"> password</string>
    <string name="that_s_it">That\'s it!</string>
    <string name="answer_the_questions">Follow the OnScreen Command</string>
    <string name="play">Play!</string>
    <string name="choose_a_category">Choose your Activity</string>
    <string name="enter_course_code">enter Course Code</string>
    <string name="enter_email">email address</string>
    <string name="progressbar_info">creating account.....</string>
    <string name="password">password</string>
    <string name="username">Name</string>
    <string name="title_activity_signup">Sign up to e_Learn</string>
    <string name="input_error_name">name required</string>
    <string name="input_error_email">email required</string>
    <string name="input_error_password">password required</string>
    <string name="input_error_phone">what Program are you  offering?</string>
    <string name="input_error_password_length">password should be at least 8 characters long</string>
    <string name="registration_success">Registered Successfully</string>
    <string name="registration_failed">Registered Failed</string>
    <string name="start_quiz_msg">Are You  Ready To  Start Quiz?</string>
    <string name="already_register">you  are already  registered</string>
    <string name="input_error_email_invalid">enter a valid email</string>
    <string name="please_kindly_choose_your_activity">Choose your Activity</string>
    <string name="about_us">Welcome to Techflex e_Literacy, your number one source for all educational Materials, Academic Insight, and CBT platform. We are dedicated to giving you the very best of e_Literacy, with a focus on dependability, customer service and uniqueness.
Founded in 2018 by Techflex Exco Team, e_Literacy has come a long way from its beginnings in a home. When Techflex first started out, his passion for  helping other students be more eco-friendly, providing the best academic insight for his fellow students drove him to do intense research, quit his day job, and gave him the impetus to turn hard work and inspiration into to a booming online academic platform. We now serve students all over, and are thrilled to be a part of the quirky, eco-friendly, fair trade wing of the educational bodies
We hope you enjoy our service as much as we enjoy offering them to you. If you have any questions or comments, please don\'t hesitate to contact us.
"\n Sincerely,"\n
Dennis S.A | IT Support Executive
</string>
    <string name="title_activity_program_choice">ProgramChoiceActivity</string>
    <string name="tab_text_1">Program</string>
    <string name="tab_text_2">Program Choice</string>
    <string name="tab_text_3">Level</string>
    <string name="top_background">top background</string>
    <string name="profile_photo">profile photo</string>
    <string name="add_friends">add friends</string>
    <string name="viral_android">Viral Android</string>
    <string name="edu_service">Edu Content</string>
    <string name="educational_service">Educational Contents</string>
    <string name="past_question">Past Questions</string>
    <string name="take_cbt_practice">Take CBT Practice</string>
    <string name="e_courseware">CourseWare</string>
    <string name="get_project_topics">Get Project Topics</string>
    <string name="it_placement_report">IT Placement</string>
    <string name="pop_pq_300l_above">POP PQ(300L Above)</string>
    <string name="downloads_past_questions">Get Past Questions</string>
    <string name="get_seminar_topics">Get Seminar Topics</string>
    <string name="exam_course">Exam / Course Summary</string>
    <string name="advert">Place Advert</string>
    <string name="name">Please Enter your Name</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="contact_form_post_message">Please wait! We\'re sending your message to the support department…</string>
    <string name="contact_posted">Your message has been successfully delivered.</string>
    <string name="contact">Contact Us</string>
    <string name="send">Send</string>
    <string name="need_help_contact_us_now">Need Help? | Contact us Now!</string>
    <string name="options_logout_user_activity">options_logout_user_activity</string>
    <string name="check_your_cgpa">GPA SCALE 5</string>
    <string name="check_your_cgpa4">GPA SCALE 4</string>
    <string name="enter_course_code_e_g_bus205"> e.g bus205</string>
    <string name="title_activity_about">About</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="about_us_text">About Us</string>
    <string name="update_profile">update profile</string>
    <string name="logout">logout</string>
    <string name="enter_course_code_n_e_g_bfn203">enter course code  e.g bfn203</string>
    <string name="subscribe">Subscribe</string>
    <string name="activation_code">ACTIVATION CODE</string>
    <string name="expired_sub_msg">Attention!</string>
    <string-array name="Program_list">Program List
        <item>School of Arts and Social Sciences</item>
        <item>Centre for Life-Long Learning and Workplace Training</item>
        <item>School of Management Sciences</item>
        <item>Arts &amp; Humanities Education</item>
        <item>School of Education</item>
        <item>School of Law</item>
        <item>School of Health Sciences</item>
        <item>School of Science and Technology</item>
    </string-array>
    <string name="course_summary">Course Summary</string>
    <string name="course_videos">Course Videos</string>
</resources>