<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainActivity.UserActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:contentDescription="@string/top_background"
            android:id="@+id/header_cover_image"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/spectrum" />

        <ImageView
            android:contentDescription="@string/profile_photo"
            android:id="@+id/user_profile_photo"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_below="@+id/header_cover_image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-90dp"
            android:elevation="5dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/user_profile2" />

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header_cover_image"
            android:background="#3700b3"
            android:elevation="4dp"
            android:paddingBottom="24dp">

            <ImageView
                android:contentDescription="@string/add_friends"
                android:id="@+id/add_friend"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_toStartOf="@+id/drop_down_option_menu"
                app:srcCompat="@drawable/add_user" />

            <ImageView
                android:contentDescription="@string/options_logout_user_activity"
                android:id="@+id/drop_down_option_menu"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:srcCompat="@drawable/drop_down" />

            <TextView
                android:id="@+id/user_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="76dp"
                android:text="@string/viral_android"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_profile_short_bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/user_profile_name"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:text="@string/please_kindly_choose_your_activity"
                android:textColor="#fff"
                android:textSize="14sp" />
        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:scrollbars="vertical"
            style="@style/AppTheme"
            android:saveEnabled="true"
            android:focusable="true"
            android:layoutMode="clipBounds"
            android:scrollbarStyle="outsideInset"
            android:layout_below="@id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profile_layout"
                android:layout_marginTop="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/get_past_questions"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="#fff"
                    android:clickable="true"
                    android:focusable="true"
                    android:elevation="4dp"
                    android:padding="20dp"
                    android:text="@string/read_past_questions" />

                <TextView
                    android:id="@+id/take_practice_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:background="#fff"
                    android:clickable="true"
                    android:focusable="true"
                    android:elevation="4dp"
                    android:padding="20dp"
                    android:text="@string/take_cbt_practice" />

                <TextView
                    android:id="@+id/e_course_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="#fff"
                    android:clickable="true"
                    android:focusable="true"
                    android:elevation="4dp"
                    android:padding="20dp"
                    android:text="@string/e_courseware" />
                <TextView
                    android:id="@+id/gp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="#fff"
                    android:clickable="true"
                    android:focusable="true"
                    android:elevation="4dp"
                    android:padding="20dp"
                    android:text="@string/check_your_cgpa" />

                <TextView
                    android:id="@+id/advert"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:background="#fff"
                    android:clickable="true"
                    android:focusable="true"
                    android:elevation="4dp"
                    android:padding="20dp"
                    android:text="@string/advert" />
                <TextView
                    android:id="@+id/contact_us"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="#fff"
                    android:clickable="true"
                    android:elevation="4dp"
                    android:focusable="true"
                    android:padding="20dp"
                    android:text="@string/contact" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>


    </RelativeLayout>

</LinearLayout>