<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/color_black"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".mainActivity.Contact"
    android:fillViewport="true"
    android:id="@+id/relativeLayout5">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="200dp"
            android:fontFamily="sans-serif-medium"
            android:text="Send us mail"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/user_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/et_bg"
            android:fontFamily="sans-serif-light"
            android:hint="@string/name"
            android:inputType="text"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:paddingStart="20sp"
            android:paddingEnd="20sp"
            android:textStyle="bold"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textColorHint="@color/white"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login"/>

        <EditText
            android:id="@+id/user_email_edit_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/et_bg"
            android:fontFamily="sans-serif-light"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:paddingStart="20sp"
            android:paddingEnd="20sp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textColorHint="@color/white"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_name_edit_text" />


        <EditText
            android:id="@+id/user_subject_edit_text"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/et_bg"
            android:fontFamily="sans-serif-light"
            android:hint="@string/subject"
            android:inputType="text"
            android:textColor="@color/white"
            android:paddingStart="20sp"
            android:paddingEnd="20sp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textColorHint="@color/white"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_email_edit_text" />

        <EditText
            android:id="@+id/user_message_edit_text"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@drawable/et_bg"
            android:fontFamily="sans-serif-light"
            android:hint="@string/message"
            android:inputType="textMultiLine"
            android:textColor="@color/white"
            android:paddingStart="20sp"
            android:paddingEnd="20sp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:textColorHint="@color/white"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_subject_edit_text" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/_2019_techflex_e_Literacy"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <Button
            android:id="@+id/post_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/login_btn"
            android:padding="12dp"
            android:textColor="@color/white"
            android:text="@string/send"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/user_message_edit_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
